  -  Higher prority for keywords over regexps (BenBE)
  -  Improvements to language files (BenBE)
     * Removed some superfluous keywords from ABAP (BenBE)
     * Removed duplicate keywords for Progress (BenBE)
     * Removed duplicate keywords for T-SQL (BenBE)
     * Linking for PowerShell special variables revised (BenBE)
Version 1.0.8.3
  -  Added language files
     * DCS (Stelio Passaris)
     * Locomotive Basic (Nacho Cabanes)
     * LSL2 (Linden Scripting Language) (William Fry)
     * Modula-3 (Martin Bishop)
     * Oberon-2 (Mike Mol)
     * Rebol (Lecanu Guillaume)
  -  Fixed a problem where HardEscapes weren't working when no escape char was given (BenBE)
  -  Added a PARSER_CONTROL setting to treat whitespace inside of keywords in
     the language file as "any whitespace" in the source (i.e. "CREATE TABLE"
     in SQL will match "CREATE\s+TABLE" instead of literally matching) (BenBE)
  -  Added a possibility to allow setting the style for escape characters (BenBE)
  -  Improvements to language files (BenBE)
     * Added some missing Perl keywords and obscure default variables (BenBE)
     * Allow for escaped colons to appear in CSS names (BenBE, simon)
     * Added multiline continuation suppoert of preprocessor defines for
       C, C for Mac, C++ and CC++ with Qt support (BenBE)
     * keywords for C-based languages are case-sensitive (BenBE)
     * Broken AutoIt highlighting (BenBE)
     * Problem with escaped backslash in PHP and D (BenBE)
     * Added some more functions for PHP (BenBE)
     * Some changes for AppleScript (Stefan Klieme)
     * Forbid highlighting keywords followed by / in bash (BenBE)
     * Updated the LaTeX file to link some keywords (BenBE)
     * Additional text rendered when matching special variables for PowerShell (BenBE)
     * Added some more keywords for ABAP (BenBE, Sandra Rossi, Jacob Laursen)
Version 1.0.8.2
  -  Added language files
     * Brainfuck \ Brainfork (Benny Baumann)
     * HQ9+ (Benny Baumann)