@@ -117,7 +117,7 @@ $language_data = array (
             )
         ),
     'URLS' => array(
-        1 => 'http://www.golatex.de/wiki/index.php?title=\\{FNAME}',
+        1 => 'http://www.golatex.de/wiki/index.php?title=%5C{FNAME}',
         ),
     'OOLANG' => false,
     'OBJECT_SPLITTERS' => array(
